# Continuity-

./: .gitignore  BUILD_STATUS.md  CIRCULAR_IMPORT_FIX_v1.0.2.md  FRAMEWORK_OPTIONS.md  GITHUB_ACTIONS_CONFIG_v1.0.2.md  HOTFIX_v1.0.1_NOTES.md  IVM_ARCHITECTURE.md  KIVY_DEPLOYMENT.md  README.md  RELEASE_NOTES_v1.0_PRODUCTION.md  UDAC_CRASH_LOG_README.txt  build_android.sh  build_release.sh  buildozer.spec  capture_crash_log.sh  dimensional_processing_system_standalone_demo.py  generate_icons.py  main.py  pyproject.toml  requirements.txt  restore_main.sh  test_kivy.py  test_minimal.sh
.github/workflows/: build-android (3).yml  build-android.yml  build.yml  unpack.yml
android_res/drawable/: splash_screen_background.xml
android_res/values/: colors.xml  strings.xml  styles.xml
android_res/values-v35/: styles.xml
android_res/xml/: file_paths.xml  network_security_config.xml
dimensional_cortex/android/gradle/: build.gradle  settings.gradle
dimensional_cortex/android/gradle/app/: build.gradle  requirements.txt
dimensional_cortex/android/gradle/app/src/main/: AndroidManifest.xml
dimensional_cortex/android/gradle/app/src/main/python/dimensional_cortex/: __main__.py  continuity_injector.py  dimensional_energy_regulator_mobile.py  dimensional_memory_constant_standalone_demo.py  dimensional_processing_system_standalone_demo.py  main.py  udac_listener.py
dimensional_cortex/android/gradle/app/src/main/python/dimensional_cortex-0.1.0.dist-info/: METADATA  top_level.txt
dimensional_cortex/android/gradle/app/src/main/res/drawable/: splash_screen_background.xml
docs/: architecture.txt
p4a-recipes/kivy/: __init__.py
p4a-recipes/pyjnius/: __init__.py
src/dimensional_cortex/: app.py
src/dimensional_cortex/core/: continuity_engine.py  energy_regulator.py  logger.py  memory_constant.py  platform_registry.py  processing_system.py  session_manager.py
src/dimensional_cortex/ui/: js_bridge.py  script_builder.py  web_host.py
tests/: test_continuity_engine.py  test_platform_registry.py  test_script_builder.py  test_session_manager_logging.py
udac_portal/: __init__.py  __main__.py  __main___test.py  app.py  app_minimal.py  continuity_engine.py  crashlog.py  entitlement_engine.py  interaction_logger.py  ivm_resilience.py  kivy_app.py  platform_registry.py  production_config.py  script_builder.py  session_manager.py
(+9 files in other folders)
